@@ -1,3 +1,7 @@
+2015-04-06  Ola Jeppsson  <ola@adapteva.com>
+
+	* apps/matmul-16/host/src/matmul_host.c: Fix compilation errors.
+
 2015-04-04  Andreas Olofsson  <andreas@adapteva.com>
 
 	* test/e-mesh-test/src/e-task.c (int main): Clarified test
